fixed jumping to show header

--- a/styles/portfolio-stylesheet.css
+++ b/styles/portfolio-stylesheet.css
@@ -10,6 +10,10 @@
 /* Large devices (large desktops, 1200px and up) */
 @media (min-width: @screen-lg-min) { ... }
 
+var shiftWindow = function() { scrollBy(0, -50) };
+if (location.hash) shiftWindow();
+window.addEventListener("hashchange", shiftWindow);
+
 .json{
   height:200px;
   width:100px;
